--- a/random_numbers/analysis.ipynb
+++ b/random_numbers/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import anthropic\n",
+    "import pandas as pd\n",
     "\n",
     "client = OpenAI(api_key=oai_key)\n",
     "anthropic_client = anthropic.Anthropic(api_key=anthropic_key)"
@@ -43,6 +44,16 @@
     "      ]\n",
     "    )\n",
     "    responses.append(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpt_4o_df = pd.DataFrame(responses)\n",
+    "gpt_4o_df.to_csv(\"gpt_4o.csv\", index=False)"
    ]
   },
   {
